// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator Paginator with (total > perPage && total % perPage != 0) && ( currentPage <= (1 + total / perPage) 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      3
    </span>
  </div>
  <div
    className="c3"
  >
    4
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage != 0) && ( currentPage > (1 + total / perPage) 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage == 0) && ( currentPage <= total/perPage)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c3"
  >
    2
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with (total > perPage && total % perPage == 0) && ( currentPage > total/perPage)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in actualPage value 0 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in currentPage value -20 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with error in currentPage value String 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      99
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      100
    </span>
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with error, currentPage too big 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Paginator Paginator with error, perPage < 0 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator Paginator with total < perPage && (currentPage > 1)  1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator renders correctly 1 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    1
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      3
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      4
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      5
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      6
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      7
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      8
    </span>
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      99
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      100
    </span>
  </div>
  <div
    className="c1"
  >
    <div
      className="c3"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 2 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="c0"
>
  &lt;
   
  &gt;
   
</div>
`;

exports[`Paginator renders correctly 3 - big numbers 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      407
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      408
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      409
    </span>
  </div>
  <div
    className="c3"
  >
    410
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      411
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      412
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      413
    </span>
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      459
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      460
    </span>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 4 - with sx 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
  padding: 50px;
  color: black;
  background-color: lightgray;
  font-size: 20px;
  font-family: inherit;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
  color="black"
  fontFamily="inherit"
  fontSize="20px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      3
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      4
    </span>
  </div>
  <div
    className="c3"
  >
    5
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      6
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      7
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      8
    </span>
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      59
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      60
    </span>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 5 - with selectedPageStyle 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      3
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      4
    </span>
  </div>
  <div
    className="c3"
    style={
      {
        "borderBottom": "5px dotted purple",
        "color": "purple",
        "fontWeight": "bold",
      }
    }
  >
    5
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      6
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      7
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      8
    </span>
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      59
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      60
    </span>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;

exports[`Paginator renders correctly 6 - with sx and selectedPageStyle 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: body;
  font-size: 12px;
  cursor: pointer;
  color: #C8C9CA;
  font-style: normal;
  font-weight: normal;
  line-height: 22px;
  padding: 50px;
  color: black;
  background-color: lightgray;
  font-size: 20px;
  font-family: inherit;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #D54936;
  border-bottom: 2px solid #D54936;
  padding-bottom: 3px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
  color="black"
  fontFamily="inherit"
  fontSize="20px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &lt;
    </div>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      1
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      2
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      3
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      4
    </span>
  </div>
  <div
    className="c3"
    style={
      {
        "borderBottom": "5px dotted purple",
        "color": "purple",
        "fontWeight": "bold",
      }
    }
  >
    5
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      6
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      7
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      8
    </span>
  </div>
  <div
    className="c1"
  >
    ...
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      59
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      onClick={[Function]}
    >
      60
    </span>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
    >
      &gt;
    </div>
  </div>
</div>
`;
